err/datashackleproject.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/PasteDeploy-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/PasteScript-2.0.2.dist-info'...
Listing './lib/python3.5/site-packages/datashackleproject'...
Compiling './lib/python3.5/site-packages/datashackleproject/main.py'...
***   File "./lib/python3.5/site-packages/datashackleproject/main.py", line 41
    print get_version()
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/datashackleproject/template'...
Listing './lib/python3.5/site-packages/datashackleproject/template/bin'...
Compiling './lib/python3.5/site-packages/datashackleproject/template/bin/pidproxy.py'...
***   File "./lib/python3.5/site-packages/datashackleproject/template/bin/pidproxy.py", line 35
    print "pidproxy.py <pidfile name> <command> [<cmdarg1> ...]"
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datashackleproject/template/bootstrap.py'...
***   File "./lib/python3.5/site-packages/datashackleproject/template/bootstrap.py", line 175
    exec ez_code in ez
               ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/datashackleproject/template/etc'...
Listing './lib/python3.5/site-packages/datashackleproject/template/profiles'...
Listing './lib/python3.5/site-packages/datashackleproject/template/src'...
Listing './lib/python3.5/site-packages/datashackleproject/template/src/grok'...
Listing './lib/python3.5/site-packages/datashackleproject/template/src/grok/+package+'...
Listing './lib/python3.5/site-packages/datashackleproject/template/src/grok/+package+/+package+'...
Listing './lib/python3.5/site-packages/datashackleproject/template/src/grok/+package+/+package+/static'...
Listing './lib/python3.5/site-packages/datashackleproject/template/src/grok/+package+/+package+/tests'...
Listing './lib/python3.5/site-packages/datashackleproject/template/src/pyramid'...
Listing './lib/python3.5/site-packages/datashackleproject/template/src/pyramid/+package+'...
Listing './lib/python3.5/site-packages/datashackleproject/template/src/pyramid/+package+/+package+'...
Listing './lib/python3.5/site-packages/datashackleproject/template/src/pyramid/+package+/+package+/static'...
Listing './lib/python3.5/site-packages/datashackleproject/template/src/pyramid/+package+/+package+/templates'...
Compiling './lib/python3.5/site-packages/datashackleproject/templates.py'...
***   File "./lib/python3.5/site-packages/datashackleproject/templates.py", line 67
    print "Error: The chosen project name results in an invalid " \
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datashackleproject/utils.py'...
***   File "./lib/python3.5/site-packages/datashackleproject/utils.py", line 82
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/datashackleproject-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/+package+'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/docs'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/script'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package/+package+'...
Listing './lib/python3.5/site-packages/paste/script/util'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
